--- a/index.html
+++ b/index.html
@@ -4,11 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Homepage</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 20px auto;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Homepage</h1>
-    <p>This is where you can find information about me and my interests.</p>
-    <p>Check out my FOAF document:</p>
-    <a href="http://www.example.com/myfoaf.rdf">My FOAF Document</a>
+    <div class="container">
+        <h1>Welcome to My Homepage</h1>
+        <p>This is where you can find information about me and my interests.</p>
+        <img src="path/to/your/image.jpg" alt="Your Image">
+        <p>Check out my FOAF document:</p>
+        <a href="http://www.example.com/myfoaf.rdf">My FOAF Document</a>
+    </div>
 </body>
 </html>
