--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Homepage</title>
+    <title>Supuni's Homepage</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,7 +34,7 @@
     <div class="container">
         <h1>Welcome to My Homepage</h1>
         <p>This is where you can find information about me and my interests.</p>
-        <img src="path/to/your/image.jpg" alt="Your Image">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSv9yOPWKjvIsmwR9dVuRH6DqvH-9XQZL_oVw&usqp=CAU" alt="Your Image">
         <p>Check out my FOAF document:</p>
         <a href="http://www.example.com/myfoaf.rdf">My FOAF Document</a>
     </div>
