--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Welcome to My Homepage</h1>
     <p>This is where you can find information about me and my interests.</p>
     <p>Check out my FOAF document:</p>
-    <a href="http://supuni97.github.io/supuni-foaf.rdf">My FOAF Document</a>
+    <a href="./supuni-foaf.rdf">My FOAF Document</a>
 </body>
 </html>
